--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #0077b6;
+  --primary: #003653;
   --primary-text: #caf0f8;
   --secondary: #03045e;
   --secondary-text: #ffffff;
